@@ -1,12 +1,12 @@
 package luckydrop.demo.draw.bookmark.service;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import luckydrop.demo.draw.bookmark.entity.DrawBookmark;
 import luckydrop.demo.draw.bookmark.repository.DrawBookmarkCountView;
 import luckydrop.demo.draw.bookmark.repository.DrawBookmarkRepository;
 import luckydrop.demo.draw.repository.DrawRepository;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 
@@ -38,7 +38,6 @@ public class DrawBookmarkService {
     }
 
     //상세 조회시 단건 체크
-    @Transactional(readOnly = true)
     public boolean isBookmarked(Long userId, Long drawId) {
         return drawBookmarkRepository.existsByIdUserIdAndIdDrawId(userId, drawId);
     }
@@ -46,8 +45,8 @@ public class DrawBookmarkService {
     //드로우 목록 조회 N + 1 방지용
     public Set<Long> findBookmarkedDrawIds(Long userId, List<Long> drawIds) {
 
-        if (userId == null || drawIds == null || drawIds.isEmpty()) {
-            return Collections.emptySet();
+        if (drawIds.isEmpty()) {
+            return Set.of();
         }
 
         List<Long> bookmarkedIds =
